# room-rs

./: Cargo.toml  README.md  build.rs  cfg.toml.example
room-relay-rs/: Cargo.toml
room-relay-rs/src/: lib.rs  main.rs
room-sensor-rs/: Cargo.toml
room-sensor-rs/src/: lib.rs  main.rs  sensor.rs
src/: config.rs  lib.rs  main.rs  room_sensor.rs  sensor.rs  si70xx_sensor.rs  wifi.rs
