[package]
name = "room-sensor-rs"
version = "0.1.0"
authors = ["harlem88 <harlem88.ant@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.75"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
embedded-hal = "1.0.0-rc.1"
esp-idf-hal = "0.42.5"
si70xx = "0.1.0"
toml-cfg = "0.1.3"
tokio = { version = "1.35.1", features = ["sync", "rt", "macros"] }
thiserror = "1.0.56"

[build-dependencies]
embuild = "0.31.4"
