[package]
name = "room-rs"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[workspace]
resolver = "2"
members = [
    "room-sensor-rs",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
authors = ["harlem88 <harlem88.ant@gmail.com>"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { workspace = true, default-features = false }
embassy-futures = { workspace = true }
esp-idf-svc = { workspace = true, default-features = false }
embedded-hal = { workspace = true }
esp-idf-hal = { workspace = true }
eyre = { workspace = true }
toml-cfg = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
thiserror = { workspace = true }


[build-dependencies]
toml-cfg.workspace = true

[workspace.dependencies]
embassy-futures = "0.1"
embedded-hal = "1.0.0"
embuild = "0.31.4"
esp-idf-hal = "0.43.0"
esp-idf-svc = { version = "0.48.0", default-features = false }
eyre = "0.6.12"
log = { version = "0.4", default-features = false }
toml-cfg = "0.1.3"
tokio = { version = "1.35.1", features = ["sync", "rt", "macros"] }
thiserror = "1.0.56"
