[package]
name = "room-relay-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { workspace = true, default-features = false }
embassy-futures = { workspace = true }
esp-idf-svc = { workspace = true}
embedded-hal = { workspace = true }
esp-idf-hal = { workspace = true }
eyre = { workspace = true }
room-rs = { path = ".."}
toml-cfg = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
thiserror = { workspace = true }

[build-dependencies]
embuild.workspace = true
toml-cfg.workspace = true